src/collaborative_platform/apps/close_reading/static/close_reading/css/main.css
button span, #alert{
    pointer-events: none;
}

#versionLink{font-size: 0.5em;}

#editor{
    margin-top: 155px;
    line-height: 2.3em;
}

#breadcrumb{
  position: fixed;
}

#editor p,
#editor div,
#editor br{
  display: block;
}

#editor.lowered{
    margin-top: 195px;
}

/*#annotator-root{max-width: 23.7cm;}*/
#versionLink:first-of-type{font-size: 0.7em;}
.break-word {
  display: flex;
  align-items: end;
  justify-content: space-between;
}
page {
  padding: 16px 16px;
  background: white;
  display: block;
  margin-bottom: 0.5cm;
  box-shadow: 0 1px 3px 1px rgba(60,64,67,.15);
  width: 21cm;
}

#alert{
    position: absolute;
    top: 0;
    width: 40%;
    left: 30%;
    z-index: 200;
    transition: opacity 1s;
    transition-timing-function: ease;
}

#alert.hide{opacity: 0;}
#alert.show{opacity: 1;}

#toolbar-container{
    position: fixed;
    z-index: 2;
}

#toolbar .toogle-button{
	position: relative;
	bottom: -15px;
	z-index: 1;
}
#toolbar .toogle-button .btn-primary{
    box-shadow: rgba(60, 64, 67, 0.15) 0px 2px 14px 2px;
}
#toolbar .nav-link{
    background-color: #f7f7f7;
    border-color: #dee2e6 #dee2e6 #f7f7f7;
    border-bottom: solid 1px #dee2e6;
}
#toolbar .nav-link.active{
    background-color: #fff;
    border-color: #dee2e6 #dee2e6 #fff;
}
#toolbar .tab-content{
    background-color: white;
    padding: 8px;
    border-left: solid 1px #dee2e6;
    border-right: solid 1px #dee2e6;
    border-bottom: solid 1px #dee2e6;
}
.btn.collapsed .collapse-show{display: none;}
.btn .collapsed-show{display: none;}
.btn.collapsed .collapsed-show{display: initial;}

.btn .active-show{display: none;}
.btn.active .active-show{display: initial;}
.btn.active .active-hide{display: none;}

#toolbar{
	width: 23cm; 
	position:relative;
	margin-bottom: 2em;
    box-shadow: 0px 0px 5px -3px #acc5d7, 0px 0px 9px 3px #dfdede;
    background-color: var(--light);
}
#toolbar > .card:first-of-type{padding: 0.1em 0.6em;}
#toolbar .relative-group{position: relative;}
#toolbar .relative-group:nth-of-type(1){z-index: 1;}
#toolbar .card:nth-of-type(2){
    background-color: #f7f7f7;
    padding: 1rem 1.25rem 0rem 1.25rem;
}

#toolbar div.card{
  border: none;
}

#toolbar label{
	margin-bottom: 2px;
	font-size: 0.7em;
}

#toolbar input{
	font-size: 0.9em;
	width: 100%; 
}

#asserted-value-input-options{display: none;}

div#legend i.fas{
    color:grey;
    font-weight: 900;
    font-size: 0.9em;
}

div#legend span.teiLegendElement{
    display:block;
}

span.teiLegendElement span.color{
    display: inline-block;
    height:1em;
    width:1em;
    margin-right: 3px;
    border:solid black 1px;
    position: relative;
    top:3px;
}

.autocomplete {
  /*the container must be positioned relative:*/
  position: relative;
  display: inline-block;
}

#autocomplete-list{
    position: absolute;
}

.autocomplete-items {
  border: 1px solid #d4d4d4;
  border-bottom: none;
  border-top: none;
  z-index: 99;
  /*position the autocomplete items to be the same width as the container:*/
  top: 100%;
  left: 0;
  right: 0;
  width: 100%;
}
.autocomplete-items div {
  padding: 10px;
  cursor: pointer;
  background-color: #fff; 
  border-bottom: 1px solid #d4d4d4; 
}
.autocomplete-items div:hover {
  background-color: #e9e9e9; 
}
.autocomplete-active {
  background-color: #337AB7 !important; 
  color: #ffffff; 
}

input#references-autocomplete {
    width: 20em;
}

#references{display: none;}

#history{
    height: 20px;
    position: relative;
}

#history-legend{
    color: rgb(49, 130, 154);
    position: absolute;
    right: 0;
    top: -1.3em;
    font-size: .9em;
    display: none;
}

#history.hovered #history-legend{
    display: initial;
}

#history-container{
    padding-top:10px;
    padding-bottom:8px;
}

#history.hovered{
    height: 60px;
}

#history canvas{
    height: 60px;
    width: 100%;
    display: none;
    opacity: 0;
}

#history.hovered canvas{
    display: initial;
    opacity: 1;
}

#history hr {
    position: absolute;
    bottom: 50%;
    width: 100%;
    margin: 0;
}

#versions {
    position: absolute;
    bottom: 50%;
    width: 100%;
    height: 20px;
}

.version {
    position: absolute;
    height: 10px;
    width: 10px;
    background-color: gray;
    display: inline-block;
    bottom: -5px;
}

div#history-popup{
    display:none;
    position:absolute;
    z-index:500;
    width:25em;
    line-height: 1.4em;
    padding: 7px;
    background-color:white;
    box-shadow:0 1px 3px 1px rgba(60,64,67,.15);
}

div#history-popup div.content{
    width:100%;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
}

div#history-popup span{
    display: inline-block;
}

div#history-popup span.color{
    display: inline-block;
    height: 1em;
}

#popup{
    z-index: 20;
    position: fixed;
    display: none;}

#popup-arrow{
    width: 20px;
    height: 20px;
    position: absolute;
    left: 8.5rem;
    transform: rotate(45deg);
    border-bottom: none;
    border-right: none;
    top: -10px;
}

.help-tooltip:before{
    content:"\f059";
    color:#00b3b0;
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    font-size: 1.2em;
    margin-left: 3px;
}



/*----------------------------------------*/

.sidebar{
  position: fixed;
  top: 184px;
  bottom: 0;
  left: 0;
  z-index: 100; /* Behind the navbar */
  padding: 8px 0 0; /* Height of navbar */
}

.btn-collapse{
  display: block;
  width: 100%;
}

.btn-collapse.collapsed{
  display: initial;
  width: initial;
}

.btn-collapse .onCollapse{
  display: none;
}

.btn-collapse.collapsed .onCollapse{
  display: initial;
}

.sidebar > div, 
.legend > div{
  box-shadow: inset -1px 1px 0 rgba(0, 0, 0, .1);
  background-color: var(--light);
  text-align: initial;
}

.legend > div{
  box-shadow: inset 1px -1px 0 rgba(0, 0, 0, .1);
  height: 520px;
}

.legend > div{padding-left: 15px;}

.legend {
  position: fixed;
  top: 184px;
  bottom: 0;
  right: 0;
  z-index: 100; /* Behind the navbar */
  padding: 8px 0 0; /* Height of navbar */
  text-align: end;
}

.sidebar-sticky {
  position: relative;
  top: 0;
  height: calc(100vh - 48px);
  padding-top: .5rem;
  overflow-x: hidden;
  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
}

@supports ((position: -webkit-sticky) or (position: sticky)) {
  .sidebar-sticky {
    position: -webkit-sticky;
    position: sticky;
  }
}

.sidebar .nav-link {
  font-weight: 500;
  color: #333;
}

.sidebar .nav-link .feather {
  margin-right: 4px;
  color: #999;
}

.sidebar .nav-link.active {
  color: #007bff;
}

.sidebar .nav-link:hover .feather,
.sidebar .nav-link.active .feather {
  color: inherit;
}

.sidebar .card.hovered,
.sidebar .card:hover{
  margin: 5px;
  width: 98% !important;
  border-color: var(--primary);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15) !important;
}
.sidebar .card .target_id.hovered{
  font-weight: bold;
  color: black !important;
}

.sidebar-heading {
  font-size: .75rem;
  text-transform: uppercase;
}

#certaintyList > ul{padding-left: 0;}
#certaintyList .list-group-item{padding:0;}

#certaintyList .card:last-child{
  margin-bottom: 12em;
}

@media (min-width: 1800px) {
    #left-sidebar{max-width: 25%;}
}

